[package]
name = "fieldXtender"
version = "0.1.0"
authors = ["Derobert <adriendml99@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENCE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.55", features = ["extra-traits","full"]} 
quote = "1.0.9"

[lib]
proc-macro = true

